Add update item endpoint
